--- a/style/backoffice.css
+++ b/style/backoffice.css
@@ -1,3 +1,3 @@
 treechildren::-moz-tree-image(modules_iframe_iframe){
-	list-style-image: url(/icons/small/element.png) ;
+	list-style-image: url(/changeicons/small/element.png) ;
 }
